--- a/projectPages/blood.html
+++ b/projectPages/blood.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="footerGem">
+<html lang="en" ng-app="gem">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -12,37 +12,37 @@
 
 <body class="grey lighten-2" >
 
+<div class="row">
+    <nav id="home" class="grey darken-4" role="navigation" ng-controller="FooterController as nava">
+        <div class="container">
+            <div class="nav-wrapper"><a id="logo-container" ng-href="../{{nava.nav.nav1Link}}" class="brand-logo">{{nava.nav.nav1Name}}</a>
+                <ul id="nav-mobile" class="right side-nav">
+                    <li><a ng-href="../{{nava.nav.nav2Link}}">{{nava.nav.nav2Name}}</a></li>
+                    <li><a ng-href="../{{nava.nav.nav3Link}}">{{nava.nav.nav3Name}}</a></li>
+                    <li><a ng-href="../{{nava.nav.nav4Link}}">{{nava.nav.nav4Name}}</a></li>
+                    <li><a ng-href="../{{nava.resumeLink}}">Resume</a></li>
+                </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<div class="container">
+    <ul id="slide-out" class="side-nav fixed">
+        <li><a href="#home">Back to Top</a></li>
+        <li><a href="#about">About/Download</a></li>
+        <li><a href="#play">Playthrough</a></li>
+        <li><a href="#contribution">My contribution</a></li>
+        <li><a href="#control">Controls</a></li>
+        <li><a href="#credit">Team credits</a></li>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+</div>
 
 
 
-<nav id="home" class="grey darken-4" role="navigation" ng-controller="FooterController as nava">    
-  <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" ng-href="../{{nava.nav.nav1Link}}" class="brand-logo">{{nava.nav.nav1Name}}</a>
-        <ul id="nav-mobile" class="right side-nav">
-          <li><a ng-href="../{{nava.nav.nav2Link}}">{{nava.nav.nav2Name}}</a></li>
-           <li><a ng-href="../{{nava.nav.nav3Link}}">{{nava.nav.nav3Name}}</a></li>
-           <li><a ng-href="../{{nava.nav.nav4Link}}">{{nava.nav.nav4Name}}</a></li>
-            <li><a ng-href="../{{nava.resumeLink}}">Resume</a></li>
-        </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-      </div>
-    </div>
-</nav>
  <div class="row">
-    <div class="col s1">
-
-
-   <ul id="slide-out" class="side-nav fixed">
-      <li><a href="#home">Back to Top</a></li>
-      <li><a href="#about">About/Download</a></li>
-      <li><a href="#play">Playthrough</a></li>
-      <li><a href="#contribution">My contribution</a></li>
-      <li><a href="#control">Controls</a></li>
-      <li><a href="#credit">Team credits</a></li>
-  </ul>
-  <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-  </div>
-
-    <div id="about" class="col s11">
+    <div id="about" class="container">
       <div class="section no-pad-bot" id="index-banner">
         <div class="container">
           <br><br>
@@ -175,7 +175,7 @@
 
   <!--  Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-  <script type="text/javascript" src="../footer.js"></script>
+  <script type="text/javascript" src="../gem.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
    <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
