--- a/projectPages/foodrun.html
+++ b/projectPages/foodrun.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="footerGem">
+<html lang="en" ng-app="gem">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -216,7 +216,7 @@ Development is currently in hiatus as most of the members have decided to work o
 
   <!--  Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-  <script type="text/javascript" src="../footer.js"></script>
+  <script type="text/javascript" src="../gem.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
    <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
