--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 
   <!-- Title of webpage. Change at your own risk.-->
-  <title>Jason Chiu: Developer, Coffee-Seeker.</title>
+  <title>Jason, the Chiu</title>
 
   <!-- Brief description of web page here that shows up. -->
-  <meta name="description" content="Jason is a senior at UCI studying game development, loves coffee. Jason makes cool stuff. And understands basic SEO. :)" />
+  <meta name="description" content="Jason is a senior at UCI currently studying game development, and loves coffee. Jason makes cool stuff. And understands basic SEO. :)" />
 
   <!-- Allows crawlers to see things. Unnecessary for now, but can toggle options on and off as necessary in the future. -->
   <!-- https://support.google.com/webmasters/answer/79812?hl=en -->
@@ -52,7 +52,7 @@
     </div>
   </nav>
 
-
+<!-- Center section with image that responds when clicked. -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <div class="row center">
@@ -60,51 +60,43 @@
       </div>
       <div class="row center">
         <h3 class="header col s12 light">I'm Jason.</h3> 
-        <p class="heavy">I'm a student at UCI.<br>I'm passionate about game development, network programming, and web apps.
-          <br> Check out some of my projects below.
+        <p class="heavy">Passionate about developing games, socket programming, and building web apps.
         </p>
       </div>
     </div>
   </div>
 
-
-  <div class="row center">        
-
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <div class="icon-block">            
-                <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
-                  <span class="card-title">PROJECTS</span>
-             </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <div class="icon-block">
-              <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-                <span class="card-title">WORK EXP</span>
+  <!-- 2 columns that resize for mobile/window shrinking -->
+  <div class ="container">
+    <div class="row center">
+        <!-- Little flashcard/section for my project section -->
+          <div class="col s12 m6">
+            <div class="card blue-grey darken-1">
+              <div class="card-content white-text">
+                <div class="icon-block">
+                  <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
+                    <span class="card-title">PROJECTS</span>
+               </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <div class="icon-block">
-                <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                  <span class="card-title">CLUBS</span>
+        <!-- Second little flashcard/section for the "about" section. -->
+          <div class="col s12 m6">
+            <div class="card blue-grey darken-1">
+              <div class="card-content white-text">
+                <div class="icon-block">
+                <a href="about.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
+                  <span class="card-title">About</span>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-    </div>
+      </div>
+  </div>
 
+<!-- Making use of angular here again, but it's sort of redundant. TODO: fix this. -->
   <footer ng-controller="FooterController as footer" class="grey darken-4">
     <div class="container">
       <div class="row">
@@ -139,23 +131,36 @@
 
 
   <!--  Scripts-->
+
+  <!-- ANGULAR CDN -->
+  <!-- Using angular to simulate SSI. I can probably do this better, but I'll leave it as is for now -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
   <script type="text/javascript" src="gem.js"></script>
+
+  <!-- JQUERY CDN -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+  <!-- Materialize effects/scripts. Their work is really clean, and I prefer it to bootstrap. -->
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+
+  <!-- Bad practice, but this is a good example of what not to do when I show my site. -->
   <script>
 
+    // A function that toasts you. Go on!
     function aToastToYou()
   {
-      toast('Nice to meet you!', 3000, 'rounded') // 'rounded' is the class I'm applying to the toast
+      toast('Welcome! Here is a toast.', 3000, 'rounded') // 'rounded' is the class I'm applying to the toast
   }
 
+    // A random function in the middle of the script tag, that also does random things.
   function returnRandomValue()
   {
     return Math.floor((Math.random() * 6000) + 3000);
   }
 
+    // Hey visitor! A toast to you.
+    // Run this on document ready.
     $(document).ready(function(){
         aToastToYou();
     });
