Added a test script for SEO (testing the feature) which allows google to think of my site as a software.

--- a/index.html
+++ b/index.html
@@ -168,5 +168,27 @@
 
 
   </script>
+
+<!-- Testing out google's richtext/structured data for more SEO -->
+
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "SoftwareApplication",
+  "name": "Angry Birds",
+  "operatingSystem": "ANDROID",
+  "applicationCategory": "http://schema.org/GameApplication",
+  "aggregateRating":{
+    "@type": "AggregateRating",
+    "ratingValue": "4.6",
+    "ratingCount": "8864"
+  },
+  "offers":{
+    "@type": "Offer",
+    "price": "1.00",
+    "priceCurrency": "USD"
+  }
+}
+</script>
   </body>
 </html>
