Added a test script for SEO (testing the feature) which allows google to think of my site as a software.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </script>
 
 <!-- Testing out google's richtext/structured data for more SEO -->
-
+<!-- THIS IS NOT MINE -->
   <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
