--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <!-- Title of webpage. Change at your own risk.-->
-  <title>Jason Chiu: Developer, Coffee-Seeker.</title>
+  <title>Jason Chiu - Portfolio Site</title>
 
   <!-- Brief description of web page here that shows up. -->
   <meta name="description" content="Jason is a senior at UCI studying game development, loves coffee. Jason makes cool stuff. And understands basic SEO. :)" />
@@ -59,52 +59,53 @@
         <img id="MainImg" class="responsive-img circle" onclick="aToastToYou()" src="images/jason.jpg">
       </div>
       <div class="row center">
-        <h3 class="header col s12 light">I'm Jason.</h3> 
-        <p class="heavy">I'm a student at UCI.<br>I'm passionate about game development, network programming, and web apps.
-          <br> Check out some of my projects below.
+        <p class="heavy">Jason is a student who is passionate about game development, network programming, and web apps.
         </p>
       </div>
     </div>
   </div>
 
 
-  <div class="row center">        
+  <div class="container row center">
 
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card grey darken-1">
             <div class="card-content white-text">
               <div class="icon-block">            
                 <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
                   <span class="card-title">PROJECTS</span>
+                    <p>Check out my work.</p>
              </div>
             </div>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card grey darken-1">
             <div class="card-content white-text">
               <div class="icon-block">
               <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-                <span class="card-title">WORK EXP</span>
+                <span class="card-title">ABOUT ME</span>
+                  <p>Learn more about me!</p>
               </div>
             </div>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card grey darken-1">
             <div class="card-content white-text">
               <div class="icon-block">
                 <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                  <span class="card-title">CLUBS</span>
+                  <span class="card-title">PROCESS</span>
+                <p>My process and tools.</p>
               </div>
             </div>
           </div>
         </div>
 
     </div>
-
+<!--
   <footer ng-controller="FooterController as footer" class="grey darken-4">
     <div class="container">
       <div class="row">
@@ -136,6 +137,7 @@
       </div>
     </div>
   </footer>
+-->
 
 
   <!--  Scripts-->
