Added more style changes to index; need to keep working on redesigning.

--- a/process.html
+++ b/process.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- Title of webpage. Change at your own risk.-->
-    <title>Jason Chiu - About</title>
+    <title>Jason Chiu - Process</title>
 
     <!-- Brief description of web page here that shows up. -->
     <meta name="description" content="Jason is a senior at UCI studying game development, loves coffee. Jason makes cool stuff. And understands basic SEO. :)" />
@@ -36,7 +36,7 @@
 
 </head>
 
-<body class="grey lighten-2" >
+<body class="center grey lighten-2" >
 
 <!-- Nav bar. I use angular to sort of simulate SSI -->
 <nav class="grey darken-4" role="navigation" ng-controller="FooterController as nava">
@@ -56,9 +56,9 @@
 <!-- Structure it with an image on the side, text on the left for the first container -->
 <div class="section no-pad-bot" id="index-banner">
     <div class="container row">
-        <h1 class="left">About Jason Chiu</h1>
+        <h1 class="left">My workflow</h1>
         <div class="col s12 m8">
-            <p>Some information about me! (coming soon)</p>
+            <p>Some information about my workflow! (coming soon)</p>
         </div>
         <div class="col s12 m4"> <!-- Replace/change the image -->
             <img id="MainImg" class="responsive-img circle" onclick="aToastToYou()" src="images/jason.jpg">
@@ -68,57 +68,70 @@
 </div>
 
 
-<!-- Skills and experience container -->
+
+<!-- Process container for setup developemnt -->
+<div class="container row">
     <div class="container row">
-
-        <div class="col s12 m6">
-            <h4 class="white-text black">Skills:</h4>
-            <ul><!-- List your skills (what you're amazing at) here -->
-                <li>JavaScript</li>
-                <li>HTML/CSS</li>
-                <li>Agile Development</li>
-                <li>JQuery/JavaScript</li>
-                <li>Unity 3D</li>
-                <li>Git/Version Control</li>
-            </ul>
-        </div>
-
-        <div class="col s12 m6">
-            <h4 class="white-text black">Experience with:</h4>
-            <ul><!-- List your experience (still learning) here -->
-                <li>Python</li>
-                <li>Java</li>
-                <li>C++</li>
-                <li>Wireframes</li>
-                <li>Issue Tracking</li>
-            </ul>
-        </div>
+        <h3 class="left">General Setup:</h3>
     </div>
+    <div class="container left">
+    <ul class="left"><!-- List your skills (what you're amazing at) here -->
+        <li>JavaScript</li>
+        <li>HTML/CSS</li>
+        <li>Agile Development</li>
+        <li>JQuery/JavaScript</li>
+        <li>Unity 3D</li>
+        <li>Git/Version Control</li>
+    </ul>
+    </div>
+</div>
+
+
+
+<!-- Process container for game development -->
+<div class="container row">
+    <div class="container row">
+        <h3 class="left">Game Development:</h3>
+    </div>
+    <div class="col s12 m6">
+        <h4 class="white-text black">Tools:</h4>
+        <ul><!-- List your skills (what you're amazing at) here -->
+            <li>JavaScript</li>
+            <li>HTML/CSS</li>
+            <li>Agile Development</li>
+            <li>JQuery/JavaScript</li>
+            <li>Unity 3D</li>
+            <li>Git/Version Control</li>
+        </ul>
+    </div>
+
+
+</div>
 
 <!-- Work and clubs container -->
 
-    <div class="container row">
+<div class="container row">
 
-        <div class="col s12 m6">
-            <h4 class="white-text black">Work Experience:</h4>
-            <ul><!-- List your work exp (what you working at) here -->
-                <li>Student Ambassador Lead at The Portal</li>
-                <li>Research Assistant at Calit2</li>
-                <li>Campus Ambassador at ReadyForce</li>
-                <li>General Intern at DynaSafe Cisco</li>
-            </ul>
-        </div>
-
-        <div class="col s12 m6">
-            <h4 class="white-text black">Extracurriculars:</h4>
-            <ul><!-- List your extracurriculars (may remove eventually) here -->
-                <li>Vice President at VGDC UCI</li>
-                <li>Webmaster, Taiwanese American Organization</li>
-                <li>Lead Organizer, HackUCI</li>
-            </ul>
-        </div>
-
+    <div class="col s12 m6">
+        <h4 class="white-text black">Work Experience:</h4>
+        <ul><!-- List your work exp (what you working at) here -->
+            <li>Student Ambassador Lead at The Portal</li>
+            <li>Research Assistant at Calit2</li>
+            <li>Campus Ambassador at ReadyForce</li>
+            <li>General Intern at DynaSafe Cisco</li>
+        </ul>
     </div>
+
+    <div class="col s12 m6">
+        <h4 class="white-text black">Extracurriculars:</h4>
+        <ul><!-- List your extracurriculars (may remove eventually) here -->
+            <li>Vice President at VGDC UCI</li>
+            <li>Webmaster, Taiwanese American Organization</li>
+            <li>Lead Organizer, HackUCI</li>
+        </ul>
+    </div>
+
+</div>
 
 
 <!-- Fun and hobbies container -->
