--- a/index.html
+++ b/index.html
@@ -54,13 +54,24 @@
 
 
   <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <div class="row center">
+    <div class="container row">
+      <div class ="col s12 m6">
+        <h1 class="indexTitle1">Jason Chiu</h1>
         <img id="MainImg" class="responsive-img circle" onclick="aToastToYou()" src="images/jason.jpg">
-      </div>
-      <div class="row center">
-        <p class="heavy">Jason is a student who is passionate about game development, network programming, and web apps.
-        </p>
+        <h3 class="">Game Developer</h3>
+          <p class="heavy">I'm passionate about game development, network programming, and web apps.
+         </p>
+    </div>
+      <div class="col s12 m6">
+        <div class="card blue-grey darken-1 floatBottom">
+          <div class="card-content white-text">
+            <div class="icon-block">
+              <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
+              <div class="card-title black">PROJECTS</div>
+              <p>Check out my work.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -68,36 +79,24 @@
 
   <div class="container row center">
 
-        <div class="col s12 m4">
-          <div class="card grey darken-1">
-            <div class="card-content white-text">
-              <div class="icon-block">            
-                <a href="projects.html"><img class="responsive-img" src="images/onwiththeshow.png"></a>
-                  <span class="card-title">PROJECTS</span>
-                    <p>Check out my work.</p>
-             </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
+        <div class="col s12 m6">
           <div class="card grey darken-1">
             <div class="card-content white-text">
               <div class="icon-block">
-              <a href="projectsOther.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
-                <span class="card-title">ABOUT ME</span>
+              <a href="about.html"> <img class="responsive-img " src="images/jason2.jpg"></a>
+                <div class="card-title">ABOUT ME</div>
                   <p>Learn more about me!</p>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m6">
           <div class="card grey darken-1">
             <div class="card-content white-text">
               <div class="icon-block">
-                <a href="clubsOrgs.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
-                  <span class="card-title">PROCESS</span>
+                <a href="process.html"> <img class="responsive-img " src="images/jason1.jpg"></a>
+                  <div class="card-title">PROCESS</div>
                 <p>My process and tools.</p>
               </div>
             </div>
