Add google analytics tracking and update readme

--- a/404.html
+++ b/404.html
@@ -53,8 +53,11 @@
     </style>
 </head>
 <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+    <h1>Page Not Found! :(</h1>
+    <p>Sorry good madam / sir...<br/>
+        But the page you were trying to view does not exist.
+    <br/>
+    You can find your way back home <a href="index.html">here.</a></p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
