Update resume, projects, navigation, and home page

--- a/experience.html
+++ b/experience.html
@@ -37,28 +37,31 @@
 <body>
 
 
-    <!-- Navigation -->
-    <nav id="nav-container" class="grey darken-4">
-        <div id="nav-constrain">
-            <div class="nav-wrapper">
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="experience.html">Experience</a></li>
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="experience.html">Experience</a></li>
-                </ul>
-            </div>
+<!-- Navigation -->
+<nav id="nav-container" class="grey darken-4">
+    <div id="nav-constrain">
+        <div class="nav-wrapper">
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="resume/resume_current.html">Resume</a></li>
+            </ul>
+            <ul class="side-nav" id="mobile-demo">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="resume/resume_current.html">Resume</a></li>
+
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!--Page header-->
     <div id="page-header-main" class="container left-align">
-        <h2>Experience</h2>
+        <h2>Work Experience</h2>
     </div>
 
     <div class="divider"></div>
@@ -70,7 +73,7 @@
             <div class="container experience-container">
                 <div class="row experience-row">
                     <div class="col s6">
-                        <h5 class="left-align experience-name">BluePanda Labs</h5>
+                        <h5 class="left-align experience-name">The Portal, Equitive LLC</h5>
                         <i>Project Manager & Operations Lead</i>
                     </div>
                     <div class="col s6">
@@ -80,7 +83,7 @@
 
                 <p class="experience-description">
                     Collaborate with stakeholders to determine project specs, handle requirement change, and meet deadlines.
-                    Manage four teams of web developers to ensure projects adhere to proposed schedule, scope, and budget.
+                    Manage multiple small teams of two-four web developers to ensure projects adhere to proposed schedule, scope, and budget.
                     Deliver accurate estimates/timelines to clients, leverage agile methodologies to ensure continuous delivery.</p>
                 <p class="experience-link right-align">
                     <a href="http://bluepandalabs.com/">Website</a>
@@ -92,7 +95,7 @@
             <div class="container experience-container">
                 <div class="row experience-row">
                     <div class="col s6">
-                        <h5 class="left-align experience-name">The Portal by K5 Ventures</h5>
+                        <h5 class="left-align experience-name">The Portal by K5 ventures</h5>
                         <i>Administrative / Team Lead</i>
                     </div>
                     <div class="col s6">
@@ -101,7 +104,7 @@
                 </div>
 
                 <p class="experience-description">
-                     Use relevant web technologies to implement creative solutions for clients. Apply technical knowledge to train new hires.
+                     Use relevant web technologies to implement creative solutions for clients. Apply technical knowledge to evaluate and train new hires.
                 Handle recruitment, event planning, and marketing strategy. Manage organization website and connect with potential leads.</p>
                 <p class="experience-link right-align">
                     <a href="http://theportal.io/">Website</a>
@@ -122,6 +125,9 @@
                 </div>
 
                 <p class="experience-description">
+                    Promote the ReadyForce platform through research and analysis of target audience.
+                    Lead team of ambassadors to create and execute marketing strategy to increase exposure and student usage of said platform.
+                    Represent ReadyForce during UCI's tech career fair, collecting resumes of 300+ individuals.
                     </p>
                 <!--p<p class="experience-link right-align">-->
                     <!--<a href="http://theportal.io/">Website</a>-->
