--- a/navigation.html
+++ b/navigation.html
@@ -16,7 +16,7 @@
   <script src="js/jasonCustom.js"></script>
 
   <!-- Custom Styles (Applied to all pages) -->
-  <link rel="stylesheet" href="css/jasonCustom.css"></script>
+  <link rel="stylesheet" href="css/jasonCustom.css">
 
   <!-- Specific CSS for this page (Index) -->
   <link rel="stylesheet" href="css/jasonIndex.css">
@@ -25,23 +25,27 @@
   <!-- Navigation -->
   <!-- Use this snippet to update all the navigation on the site -->
 
-  <nav id="nav-container" class="grey darken-4">
-  <div id="nav-constrain">
-    <div class="nav-wrapper">
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Menu</i></a>
-    <ul class="right hide-on-med-and-down">
-         <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience.html">Experience</a></li>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-         <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience.html">Experience</a></li>
-      </ul>
-    </div>
-  </div>
-  </nav>
+            <!-- Navigation -->
+          <nav id="nav-container" class="grey darken-4">
+          <div id="nav-constrain">
+          <div class="nav-wrapper">
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Menu</i></a>
+          <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="experience.html">Experience</a></li>
+              <li><a href="resume/resume_current.html">Resume</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="experience.html">Experience</a></li>
+              <li><a href="resume/resume_current.html">Resume</a></li>
+
+          </ul>
+          </div>
+          </div>
+          </nav>
 
 <!-- Apply "active" to the proper tab -->
 <!--   // class="active" -->
