--- a/index.html
+++ b/index.html
@@ -38,23 +38,26 @@
 </head>
 <body>
 	<!-- Navigation -->
-	  <nav id="nav-container" class="grey darken-4">
-  <div id="nav-constrain">
-    <div class="nav-wrapper">
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Menu</i></a>
-    <ul class="right hide-on-med-and-down">
-         <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience.html">Experience</a></li>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-         <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience.html">Experience</a></li>
-      </ul>
-    </div>
-  </div>
-  </nav>
+	<nav id="nav-container" class="grey darken-4">
+		<div id="nav-constrain">
+			<div class="nav-wrapper">
+				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Menu</i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="experience.html">Experience</a></li>
+					<li><a href="resume/resume_current.html">Resume</a></li>
+				</ul>
+				<ul class="side-nav" id="mobile-demo">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="experience.html">Experience</a></li>
+					<li><a href="resume/resume_current.html">Resume</a></li>
+
+				</ul>
+			</div>
+		</div>
+	</nav>
 
 	<div class="container">
 		<div class="row">
@@ -67,25 +70,31 @@
 				<div class="divider"></div>
 				<div class="section">
 					<h5>I'm Jason Chiu!</h5>
-					<p>I'm a senior at the University of Calfornia, and I study computer science and develop games. I graduate in June 2016.</p>
+					<p>I graduated from the University of California in March 2016, majoring in computer game science.</p>
 				</div>
 				<div class="divider"></div>
 				<div class="section">
 					<h5>Work</h5>
-					<p>I currently work as a web developer and project manager at 
+					<p>I work as a full time web developer and project manager at
 						<a href="http://theportal.io">The Portal.</a>
+						</br>
+						I develop web applications, communicate deadlines and deliverables to our clients, and manage our developers to keep everything on schedule.
 					</p>
 				</div>
 				<div class="divider"></div>
 				<div class="section">
-					<h5>Clubs / Activities</h5>
-					<p>I'm the Vice President of the Video Game Development Club @ UCI, where I work with industry and faculty to introduce students to game development and hone their talents.</p>
+					<h5>Activities</h5>
+					<p>I was formerly the Vice President of the Video Game Development Club @ UCI, where I work with industry and faculty to introduce students to game development and hone their talents.</p>
+					<p>I also was a former board member of TAO @ UCI, where I redesigned and managed their website, and organized events for a club of 50+ active members to promote Taiwanese Culture. </p>
+					<p>I also handled sponsorships and event logistics as part of the organizing board of HackUCI 2014, which was UCI's first hackathon.</p>
 				</div>
 
 				<div class="divider"></div>
 				<div class="section">
 					<h5>Interests</h5>
-					<p>I'm obsessed about the latest Hearthstone expansion. <br/>I'm improving at League of Legends. <br/>In OverWatch, I spam Bastion.</p>
+					<p> Aiming for my next 12 arena win run in Hearthstone.
+						<br/>I'm currently obsessively farming field bosses in Blade and Soul for vanity accessories.
+						<br/>Working on my side project, which allows students to put up items they don't need for free and allow the community to benefit.</p>
 				</div>	
 
 			</div>
