--- a/projects.html
+++ b/projects.html
@@ -46,11 +46,14 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="experience.html">Experience</a></li>
+                    <li><a href="resume/resume_current.html">Resume</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="experience.html">Experience</a></li>
+                    <li><a href="resume/resume_current.html">Resume</a></li>
+
                 </ul>
             </div>
         </div>
@@ -61,7 +64,7 @@
     <div id="page-header-main" class="container left-align">
 
         <input id="project-search" type="text" placeholder="Search">
-        <h2>Projects</h2>
+        <h2>Projects Portfolio</h2>
 
 
     </div>
@@ -78,6 +81,30 @@
                     <div class="card-content white-text">
                         <div class="row project-row">
                             <div class="card-title col s6">
+                                <h5 class="left-align project-name">RainbowBook</h5>
+                            </div>
+                            <div class="card-date col s6">
+                                <h5 class="right-align project-date">Nov 2015</h5>
+                                <h5 class="right-align project-tech">MongoDB, Express.js, Node.js</h5>
+                            </div>
+                        </div>
+                        <p class="project-description"> A platform that provides indie content owners to easily distribute and share their content.
+                        </p>
+                        <p class="project-contribution">Wrote routes for customer purchases, updated data models, optimized DB queries through reworking application logic.
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a class="project-link" href="https://screeningnow.com/">See ScreeningNow</a>
+                        <a class="project-link" href="#">Dev Post</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1 project-card">
+                    <div class="card-content white-text">
+                        <div class="row project-row">
+                            <div class="card-title col s6">
                                 <h5 class="left-align project-name">ScreeningNOW</h5>
                             </div>
                             <div class="card-date col s6">
@@ -87,7 +114,7 @@
                         </div>
                         <p class="project-description"> A platform that provides indie content owners to easily distribute and share their content.
                         </p>
-                        <p class="project-contribution">I wrote routes for customer purchases and worked with the team to update user data models and write more efficient queries to our DB.
+                        <p class="project-contribution">Wrote routes for customer purchases, updated data models, optimized DB queries through reworking application logic.
                         </p>
                     </div>
                     <div class="card-action">
@@ -135,7 +162,7 @@
                         </div>
                         <p class="project-description"> A 3D first person shooter game featuring magical exploration. You play as an abandoned sailor seeking to unravel the mysteries and defeating the monsters that seek to destroy intruders.
                         </p>
-                        <p class="project-contribution">I directed stand-ups, worked with the team to create and reach milestone goals, managed issue tracking, and kept the project within scope.
+                        <p class="project-contribution">Directed team stand-ups, ensure team could reach milestone goals through effective planning / prioritization, ensured proper issue tracking formats, and kept the project within proposed scope.
                         </p>
                     </div>
                     <div class="card-action">
@@ -166,6 +193,102 @@
                     <!--</div>-->
                 <!--</div>-->
             <!--</div>-->
+
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1 project-card">
+                    <div class="card-content white-text">
+                        <div class="row project-row">
+                            <div class="card-title col s6">
+                                <h5 class="left-align project-name">PushTheLimit</h5>
+                            </div>
+                            <div class="card-date col s6">
+                                <h5 class="right-align project-date">November 2015</h5>
+                                <h5 class="right-align project-tech">Python, Flask, Angular.js</h5>
+                            </div>
+                        </div>
+                        <p class="project-description">
+                        </p>
+                        <p class="project-contribution">I directed stand-ups, worked with the team to create and reach milestone goals, managed issue tracking, and kept the project within scope.
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a class="project-link" href="#">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1 project-card">
+                    <div class="card-content white-text">
+                        <div class="row project-row">
+                            <div class="card-title col s6">
+                                <h5 class="left-align project-name">NeyborTalk</h5>
+                            </div>
+                            <div class="card-date col s6">
+                                <h5 class="right-align project-date"> Date</h5>
+                                <h5 class="right-align project-tech">Tech</h5>
+                            </div>
+                        </div>
+                        <!--<p class="project-description"> A 3D first person shooter game featuring magical exploration. You play as an abandoned sailor seeking to unravel the mysteries and defeating the monsters that seek to destroy intruders.-->
+                        <!--</p>-->
+                        <!--<p class="project-contribution">I directed stand-ups, worked with the team to create and reach milestone goals, managed issue tracking, and kept the project within scope.-->
+                        <!--</p>-->
+                    </div>
+                    <div class="card-action">
+                        <a class="project-link" href="#">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1 project-card">
+                    <div class="card-content white-text">
+                        <div class="row project-row">
+                            <div class="card-title col s6">
+                                <h5 class="left-align project-name">JazzXChange</h5>
+                            </div>
+                            <div class="card-date col s6">
+                                <h5 class="right-align project-date"> Date</h5>
+                                <h5 class="right-align project-tech">Tech</h5>
+                            </div>
+                        </div>
+                        <!--<p class="project-description"> A 3D first person shooter game featuring magical exploration. You play as an abandoned sailor seeking to unravel the mysteries and defeating the monsters that seek to destroy intruders.-->
+                        <!--</p>-->
+                        <!--<p class="project-contribution">I directed stand-ups, worked with the team to create and reach milestone goals, managed issue tracking, and kept the project within scope.-->
+                        <!--</p>-->
+                    </div>
+                    <div class="card-action">
+                        <a class="project-link" href="#">More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1 project-card">
+                    <div class="card-content white-text">
+                        <div class="row project-row">
+                            <div class="card-title col s6">
+                                <h5 class="left-align project-name">OrangeGlad</h5>
+                            </div>
+                            <div class="card-date col s6">
+                                <h5 class="right-align project-date"> Date</h5>
+                                <h5 class="right-align project-tech">Tech</h5>
+                            </div>
+                        </div>
+                        <!--<p class="project-description"> A 3D first person shooter game featuring magical exploration. You play as an abandoned sailor seeking to unravel the mysteries and defeating the monsters that seek to destroy intruders.-->
+                        <!--</p>-->
+                        <!--<p class="project-contribution">I directed stand-ups, worked with the team to create and reach milestone goals, managed issue tracking, and kept the project within scope.-->
+                        <!--</p>-->
+                    </div>
+                    <div class="card-action">
+                        <a class="project-link" href="#">More</a>
+                    </div>
+                </div>
+            </div>
+
+
+
+
 
 
             <div class="col s12 m6">
